move to maven and add docker